--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
   <body>
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top pb-3">
       <span href="" class="navbar-brand return_top">CANDY</span>
-      <button class="navbar-toggler" data-toggle = "collapse" data-target = "#navLinks" aria-labe="Toggle navigation">
+      <button class="navbar-toggler" data-toggle = "collapse" data-target = "#navLinks" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navLinks">
         <ul class="navbar-nav">
           <li class="nav-item return_top nav-link">HOME</li>
           <li class="nav-item nav-link">ABOUT</li>
-          <li class="nav-item">
-            <a href="" class="nav-link">TICKETS</a>
-          </li>
+          <li class="nav-item nav-link">TICKETS</li>
         </ul>
       </div>
     </nav>
